kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: beekeeper
  name: beekeeper-default
  labels:
    name: beekeeper-default
spec:
  revisionHistoryLimit: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      name: beekeeper-default
  template:
    metadata:
      name: beekeeper-default
      labels:
        name: beekeeper-default
    spec:
      containers:
      - image: hackgt/beekeeper:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 10m
            memory: 128Mi
        name: beekeeper-default
        ports:
        - containerPort: 3000
          name: node
        volumeMounts:
        - name: "config"
          mountPath: "/root/.netrc"
          subPath: ".netrc"
        - name: "config"
          mountPath: "/root/.kube/config"
          subPath: "config"
      volumes:
        - name: "config"
          configMap:
            name: "config"
